--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,17 @@
 # hidden files
 .*
-!.github
 
-# jekyll cache
+# python compiled files
+*.pyc
+
+# jekyll debug
 _site
+
+# Jeykll Gemfile.lock
+Gemfile.lock
+
+# yui-compressor
+*.jar
+
+# bundle cache
 vendor
