--- a/_config.yml
+++ b/_config.yml
@@ -39,15 +39,16 @@ social:
     # - https://www.linkedin.com/in/username
 
 #google_site_verification: google_meta_tag_verification # change to your verification string
-# --------------------------
 
+
+#--------------------------
 
 # Only if your site type is GitHub Project sites and doesn't have a custom domain,
 # change below value to '/projectname'.
-baseurl: '/tw00t.github.io'
+baseurl: ''
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
-timezone: Asia/Shanghai
+timezone: Asia/Kolkata
 
 google_analytics:
   id: ''          # Fill with your Google Analytics ID
@@ -61,33 +62,36 @@ google_analytics:
     cache: false  # pv data local cache, good for the users from GFW area.
 
 disqus:
+  # don't nned your opinion lol
   comments: false  # boolean type, the global switch for posts comments.
   shortname: ''    # Fill with your Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
 
 
-# Prefer color scheme setting.
+# Prefer color scheme setting, available values:
 #
-# Note: Keep empty will follow the system prefer color by default,
-# and there will be a toggle to switch the theme between dark and light
-# on the bottom left of the sidebar.
-#
-# Available options:
+#     dual   - Follow the system prefer color by default, and a toggle will display
+#              in the left bottom of Sidebar, which used for switch the theme between dark and light.
 #
 #     light  - Use the light color scheme
 #
 #     dark   - Use the dark color scheme
 #
-theme_mode: dark # <light|dark>
+theme_mode: dark
 
-# boolean type, the global switch for ToC in posts.
+# boolean type, global switch for ToC in posts.
 toc: true
 
 paginate: 10
 
+markdown: kramdown
+
+highlighter: rouge
+
 kramdown:
+  input: GFM
   syntax_highlighter: rouge
-  syntax_highlighter_opts:   # Rouge Options › https://github.com/jneen/rouge#full-options
-    css_class: highlight
+  syntax_highlighter_opts: # Rouge Options › https://github.com/jneen/rouge#full-options
+    css_class: 'highlight'
     # default_lang: console
     span:
       line_numbers: false
@@ -99,21 +103,16 @@ kramdown:
 # or you think you're smart enough to change other relevant URLs within this template.
 permalink: /posts/:title/
 
-collections:
-  tabs:
-    output: true
-    sort_by: order
-
-
 defaults:
   -
     scope:
-      path: ''          # An empty string here means all files in the project
+      path: ""          # An empty string here means all files in the project
       type: posts
     values:
       layout: post
-      comments: true    # Enable comments in posts.
+      comments: false    # Enable comments in posts.
       toc: true         # Display TOC column in posts.
+      location: Post
       breadcrumb:
         -
           label: Posts
@@ -125,15 +124,10 @@ defaults:
       comments: false
   -
     scope:
-      path: index.html
-    values:
-      breadcrumb:
-        -
-          label: Posts
-  -
-    scope:
       path: tags
     values:
+      tab_active: Tags
+      location: Tag
       breadcrumb:
         -
           label: Home
@@ -145,6 +139,8 @@ defaults:
     scope:
       path: categories
     values:
+      tab_active: Categories
+      location: Category
       breadcrumb:
         -
           label: Home
@@ -154,8 +150,7 @@ defaults:
           url: /tabs/categories/
   -
     scope:
-      path: ''
-      type: tabs             # see `site.collections`
+      path: tabs
     values:
       layout: page
       dynamic_title: true    # Hide title in mobile screens.
@@ -163,6 +158,7 @@ defaults:
         -
           label: Home
           url: /
+
 
 sass:
   sass_dir: /assets/css
@@ -175,10 +171,10 @@ compress_html:
   profile: false
   blanklines: false
   ignore:
-    envs: [development]
+    envs: []
 
 exclude:
-  - vendor
+  - vendor        # Avoid Jekyll mistakenly read the vendor directory on Travis-CI's VM .
   - Gemfile.lock
   - Gemfile
   - tools
@@ -186,11 +182,18 @@ exclude:
   - README.md
   - LICENSE
 
-jekyll-archives:
-  enabled: [categories, tags]
-  layouts:
-    category: category
-    tag: tag
-  permalinks:
-    tag: /tags/:name/
-    category: /categories/:name/
+sitemap_exclude:  # Sitemap will exclude the following items.
+  fuzzy:
+    - /assets/
+  accurate:
+    - /norobots/
+    - /tabs/
+    - /categories/
+    - /tags/
+    - /posts/
+    - 404.html
+    - feed.xml
+    - sitemap.xml
+    - robots.txt
+    - redirects.json
+
