--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ url: 'https://tw00t.github.io'
 
 author: tw00t                  # change to your full name
 
-avatar: /assets/img/sample/avatar.jpg   # support internet resources
+avatar: /assets/img/avatar.jpg   # support internet resources
 
 github:
   username: tw00t             # change to your github username
